        System: fixed uninitialized variable PHP warnings on Parent Dashboard
        System: fixed login options not working when using SSO button
        System: fixed login redirect after public registration
        System: fixed redirect logic in Payment class causing unnecessary error logs
        Activities: fixed Manage Enrolment when participants are part of more than one activity
        Data Updater: fixed attachments being cleared when new data updates are submitted
        Messenger: fixed missing From address on emails when using the Add Recipient action in Send Report
        Planner: fixed Teacher Notes in smart blocks not visible when using the Show Confidential Data toggle
        Planner: fixed access to class list in Edit Unit when viewing past and upcoming years
        Rubrics: fixed the bug preventing to view ATL Rubrics table on mobile devices
        Staff: fixed coverage longer than one week not including staff duty and activity cover
        Staff: fixed order of Staff Directory to honour the biographicalGroupingOrder setting
        Timetable Admin: fixed missing Manage Exceptions button on the timetable in Course Enrolment by Person
        Timetable Admin: fixed the issue of setting white as the default color for both background and font
        Timetable Admin: fixed bug to allow timetable deletion
        User Admin: fixed uneditable fields for new Personal Documents in Manage Users

    Deprecations
        Removed all functions in functions.php flagged for deprecation since v25

v29.0.00
--------

    Headlines
        A new mobile-responsive Timetable UI with layer visibility toggles
        An improved library borrowing page in Student Profile with tabs and quick lending actions
        An option to add new recipients to existing messages in Messenger
        A color-coded Markbook option for easier visual identification
        A simple Petty Cash system in Finance for tracking small expenses

    Security